# Latex-improver

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cmake.sh  main.cpp  makefile
include/: KMP.h  latexImprover.h  stringFinder.h
src/: KMP.cpp  latexImprover.cpp  main.cpp  stringFinder.cpp
tests/: test.sh  testFile1.tex  testFile1CorrectResponse.tex
